tests/ui/abi/unsupported.wasm64.stderr
error[E0570]: "ptx-kernel" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:42:8
   |
LL | extern "ptx-kernel" fn ptx() {}
   |        ^^^^^^^^^^^^

error[E0570]: "ptx-kernel" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:44:22
   |
LL | fn ptx_ptr(f: extern "ptx-kernel" fn()) {
   |                      ^^^^^^^^^^^^

error[E0570]: "ptx-kernel" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:48:8
   |
LL | extern "ptx-kernel" {}
   |        ^^^^^^^^^^^^

error[E0570]: "gpu-kernel" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:50:8
   |
LL | extern "gpu-kernel" fn gpu() {}
   |        ^^^^^^^^^^^^

error[E0570]: "aapcs" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:53:8
   |
LL | extern "aapcs" fn aapcs() {}
   |        ^^^^^^^

error[E0570]: "aapcs" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:55:24
   |
LL | fn aapcs_ptr(f: extern "aapcs" fn()) {
   |                        ^^^^^^^

error[E0570]: "aapcs" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:59:8
   |
LL | extern "aapcs" {}
   |        ^^^^^^^

error[E0570]: "msp430-interrupt" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:62:8
   |
LL | extern "msp430-interrupt" {}
   |        ^^^^^^^^^^^^^^^^^^

error[E0570]: "avr-interrupt" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:65:8
   |
LL | extern "avr-interrupt" {}
   |        ^^^^^^^^^^^^^^^

error[E0570]: "riscv-interrupt-m" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:68:8
   |
LL | extern "riscv-interrupt-m" {}
   |        ^^^^^^^^^^^^^^^^^^^

error[E0570]: "x86-interrupt" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:71:8
   |
LL | extern "x86-interrupt" {}
   |        ^^^^^^^^^^^^^^^

error[E0570]: "thiscall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:74:8
   |
LL | extern "thiscall" fn thiscall() {}
   |        ^^^^^^^^^^

error[E0570]: "thiscall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:76:27
   |
LL | fn thiscall_ptr(f: extern "thiscall" fn()) {
   |                           ^^^^^^^^^^

error[E0570]: "thiscall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:80:8
   |
LL | extern "thiscall" {}
   |        ^^^^^^^^^^

error[E0570]: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:83:8
   |
LL | extern "stdcall" fn stdcall() {}
   |        ^^^^^^^^^
   |
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`

error[E0570]: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:87:26
   |
LL | fn stdcall_ptr(f: extern "stdcall" fn()) {
   |                          ^^^^^^^^^
   |
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`

error[E0570]: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:93:8
   |
LL | extern "stdcall" {}
   |        ^^^^^^^^^
   |
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`

error[E0570]: "stdcall-unwind" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:97:8
   |
LL | extern "stdcall-unwind" {}
   |        ^^^^^^^^^^^^^^^^
   |
   = help: if you need `extern "stdcall-unwind"` on win32 and `extern "C-unwind"` everywhere else, use `extern "system-unwind"`

error[E0570]: "vectorcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:117:8
   |
LL | extern "vectorcall" fn vectorcall() {}
   |        ^^^^^^^^^^^^

error[E0570]: "vectorcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:119:29
   |
LL | fn vectorcall_ptr(f: extern "vectorcall" fn()) {
   |                             ^^^^^^^^^^^^

error[E0570]: "vectorcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:123:8
   |
LL | extern "vectorcall" {}
   |        ^^^^^^^^^^^^

error[E0570]: "cmse-nonsecure-call" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:126:28
   |
LL | fn cmse_call_ptr(f: extern "cmse-nonsecure-call" fn()) {
   |                            ^^^^^^^^^^^^^^^^^^^^^

error[E0570]: "cmse-nonsecure-entry" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:131:8
   |
LL | extern "cmse-nonsecure-entry" fn cmse_entry() {}
   |        ^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: "cmse-nonsecure-entry" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:133:29
   |
LL | fn cmse_entry_ptr(f: extern "cmse-nonsecure-entry" fn()) {
   |                             ^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: "cmse-nonsecure-entry" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:137:8
   |
LL | extern "cmse-nonsecure-entry" {}
   |        ^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: "custom" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:146:25
   |
LL | fn custom_ptr(f: extern "custom" fn()) {
   |                         ^^^^^^^^

error[E0570]: "custom" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:150:8
   |
LL | extern "custom" {}
   |        ^^^^^^^^

warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:105:17
   |
LL | fn cdecl_ptr(f: extern "cdecl" fn()) {
   |                 ^^^^^^^^^^^^^^^^^^^
   |
   = help: use `extern "C"` instead
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = note: `#[warn(unsupported_calling_conventions)]` (part of `#[warn(future_incompatible)]`) on by default

warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:110:1
   |
LL | extern "cdecl" {}
   | ^^^^^^^^^^^^^^^^^
   |
   = help: use `extern "C"` instead
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>

warning: "cdecl-unwind" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:113:1
   |
LL | extern "cdecl-unwind" {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: use `extern "C-unwind"` instead
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>

warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:102:1
   |
LL | extern "cdecl" fn cdecl() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: use `extern "C"` instead
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>

error: aborting due to 27 previous errors; 4 warnings emitted

For more information about this error, try `rustc --explain E0570`.
